--- a/src/Net.Pipedrive/Net.Pipedrive.csproj
+++ b/src/Net.Pipedrive/Net.Pipedrive.csproj
@@ -7,6 +7,9 @@
     <Version>1.0.0</Version>
     <Authors>ArdenHide, Lomet</Authors>
     <TargetFramework>netstandard2.0</TargetFramework>
+	<Company>The-Poolz</Company>
+	<Product>Net.Pipedrive</Product>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
 
     <PackageId>Net.Pipedrive</PackageId>
     <PackageTags>pipedrive;crm</PackageTags>
@@ -23,6 +26,12 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
